--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,7 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
+  pages_list:
+    About: '/about'
+    Archive: '/archive'
+    Feed: '/atom.xml'
