--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : google
+    provider : goatcounter
+    goatcounter :
+        id: timmybankers
     google :
         tracking_id : 'UA-48818922-1'
     getclicky :
