--- a/_config.yml
+++ b/_config.yml
@@ -99,9 +99,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : goatcounter
+    provider : google
     goatcounter :
-        id: timmybankers
+        id: 'timmybankers'
     google :
         tracking_id : 'UA-48818922-1'
     getclicky :
