--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : goatcounter
+    provider : google
     goatcounter :
         id : 'timmybankers'
     google :
